# orion

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-test.sh  e2e-readme.md  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml  e2e-integration-test.yml
docs/: Notes.md  README.md  chunking-storage.md  disk-storage-organization.md  file-upload-processing.md  processing-pipeline.md
scripts/: README.md  check_requirements.py  check_status.sh  quick_test.sh  run_test.sh  test_full_workflow.sh
sdk/: README.md  example.py  pyproject.toml  requirements.txt  setup.py
sdk/docs/: README.md
sdk/examples/: basic_usage.py  error_handling.py  upload_and_search.py
sdk/examples/book-samples/: beowolf.txt  romeo-and-juliet.txt
sdk/integration-tests/: README.md  parse_results.py  run_local_test.sh  test_e2e_integration.py  test_structure.py
sdk/orion_sdk/: __init__.py  async_client.py  client.py  config.py  exceptions.py
sdk/orion_sdk/models/: __init__.py  documents.py  queries.py  responses.py
sdk/orion_sdk/services/: __init__.py  document_service.py  library_service.py  query_service.py
sdk/orion_sdk/utils/: __init__.py  file_utils.py  http_client.py  validators.py
sdk/tests/: test_sdk_import.py
src/: __init__.py  main.py
src/api/: __init__.py
src/api/v1/: query.py  upload.py
src/core/: __init__.py  config.py  converter.py  logging.py  pipeline.py  pipeline_factory.py  pipeline_steps.py  tasks.py
src/core/domain/: __init__.py  entities.py  value_objects.py
src/core/repositories/: __init__.py  library_repository.py
src/core/search/: __init__.py  interfaces.py
src/core/services/: __init__.py  (+3 more)
src/models/: __init__.py  query.py  upload.py
tests/: __init__.py  test_api_endpoints.py  test_basic.py  test_embedding_service.py  test_embeddings_pipeline.py  test_pipeline.py  test_query_service.py  test_search_algorithms.py  test_search_interfaces.py  test_upload_validation.py  test_user_upload.py  test_vector_storage.py
(+12 files in other folders)
