[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-sdk"
version = "0.1.0"
description = "Python SDK for Orion document processing and search API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Orion Team", email = "support@orion.ai" }]
keywords = [
    "orion",
    "document",
    "processing",
    "search",
    "embedding",
    "vector",
    "similarity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["requests>=2.28.0", "urllib3>=1.26.0"]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0", "aiofiles>=0.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
    "isort>=5.0.0",
]
docs = ["sphinx>=5.0.0", "sphinx-rtd-theme>=1.0.0"]

[project.urls]
Homepage = "https://github.com/orion/orion-sdk"
Documentation = "https://orion-sdk.readthedocs.io/"
Repository = "https://github.com/orion/orion-sdk"
"Bug Reports" = "https://github.com/orion/orion-sdk/issues"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
